fix(devx): apply suggestions from code review

--- a/docs/content/about-iota/about-iota.mdx
+++ b/docs/content/about-iota/about-iota.mdx
@@ -1,10 +1,6 @@
 # About IOTA
 
-:::tip
-
 IOTA is the ninth letter of the Greek alphabet (Ι, ι) and is used figuratively in English to mean a very small amount, reflecting its status as one of the smallest Greek letters.
-
-:::
 
 The IOTA ecosystem enables programmability in both [Layer 1](#layer-1) and [Layer 2](#layer-2) using [Move](#move) and [EVM/Solidity](#evm) smart contracts respectively.
 
@@ -56,11 +52,17 @@ The IOTA Devnet is used to develop new features. You can use this network to cod
 
 The main benefit of using EVM/Solidity is its sheer amount of resources from years of development. The [IOTA Smart Contracts](../developer/iota-evm/introduction.mdx) implementation is fully compatible with these resources, allowing you to leverage all existing EVM developer tools for developing on the IOTA EVM. Any contracts you've previously written can be deployed on IOTA Smart Contracts without modification.
 
+Keep in mind that while EVM has become a standard for smart contract execution on L2s, 
+it is not inherently designed for the unique features and capabilities of L1s like Move smart contracts. 
+Move, with its focus on asset safety, resource management, and formal verification,
+offers a fundamentally different approach at the L1 level.
+
 ### Networks
 
-#### IOTA EVM
+#### IOTA EVM and Shimmer EVM
 
-IOTA EVM is the Layer 2 EVM running on top of the [IOTA Mainnet](./tokenomics/iota-token.mdx).
+IOTA EVM and Shimmer EVM are two distinct Layer 2 EVMs
+running on top of the [IOTA Mainnet](./tokenomics/iota-token.mdx).
 
 #### IOTA EVM Testnet
 
