--- a/docs/content/about-iota/iota-architecture/iota-security.mdx
+++ b/docs/content/about-iota/iota-architecture/iota-security.mdx
@@ -16,7 +16,7 @@ The set of validators changes periodically and is [determined by the amount of l
 
 ### Choosing Validators
 
-IOTA uses delegated Proof-of-Stake to select validators (computers that help run the network) for each period. Users lock and delegate their IOTA tokens to vote for who should be validators. Anyone with enough delegated tokens can become a validator.
+IOTA uses a delegated Proof-of-Stake (dPoS) mechanism to select validators (nodes that help secure and operate the network) for each period. Users can lock and delegate their IOTA tokens to vote for validators, assigning them voting power. Validators are selected based on the number of tokens delegated to them, and any node with sufficient delegated tokens can become a validator.
 
 ### Rewards for Validators and Stakers
 
