--- a/docs/content/developer/iota-101/create-coin/create-coin.mdx
+++ b/docs/content/developer/iota-101/create-coin/create-coin.mdx
@@ -66,13 +66,7 @@ Amount: <COIN-AMOUNT>
 
 ## DenyList
 
-The IOTA framework provides a `DenyList` singleton, shared object that the bearer of a `DenyCap` can access to specify a list of addresses that are unable to use a IOTA core type. The initial use case for `DenyList`, however, focuses on limiting access to coins of a specified type. This is useful, for example, when creating a regulated coin on IOTA that requires the ability to block certain addresses from using it as inputs to transactions. Regulated coins on IOTA satisfy any regulations that require the ability to prevent known bad actors from having access to those coins. 
-
-:::info
-
-The `DenyList` object is a system object that has the address `0x403`. You cannot create it yourself.
-
-:::
+See [`DenyList`](../create-coin/regulated.mdx#deny-list).
 
 ## Create regulated coin
 
