--- a/docs/content/developer/getting-started/create-a-package.mdx
+++ b/docs/content/developer/getting-started/create-a-package.mdx
@@ -28,7 +28,7 @@ The `Move.toml` file is the package's manifest. It describes the package and its
 In `.toml` files, use the hash mark (`#`) to denote a comment.
 :::
 
-```move title="my_first_package/Move.toml"
+```toml title="my_first_package/Move.toml"
 [package]
 name = "my_first_package"
 
