--- a/docs/content/about-iota/about-iota.mdx
+++ b/docs/content/about-iota/about-iota.mdx
@@ -23,7 +23,7 @@ Move is based on Rust, a programming language known for its [performance and saf
 
 :::warning
 
-While making development mistakes is almost impossible with Move, smart contracts still can have unintended edge cases and issues within their written logic. For this reason, it's still highly recommended to have smart contracts audited and double-checked even when written in Move. 
+While the Move compiler catches many development mistakes, smart contracts can still have unintended edge cases and issues within their written logic. For this reason, it's still highly recommended to have smart contracts audited and double-checked, even when written in Move. 
 
 :::
 
