fix(docs/content): documentation code examples enhancement

--- a/docs/content/developer/iota-101/access-time.mdx
+++ b/docs/content/developer/iota-101/access-time.mdx
@@ -24,7 +24,7 @@ module example::clock {
     use iota::clock::{Self, Clock};
     use iota::event;
 
-    struct TimeEvent has copy, drop, store {
+    public struct TimeEvent has copy, drop, store {
         timestamp_ms: u64
     }
 
