--- a/docs/content/developer/iota-101/create-coin/loyalty.mdx
+++ b/docs/content/developer/iota-101/create-coin/loyalty.mdx
@@ -15,11 +15,7 @@ The following example demonstrates the creation of a loyalty token that bearers 
 /// Actions:
 /// - spend - spend the token in the shop
 module examples::loyalty {
-    use std::option;
-    use iota::transfer;
-    use iota::object::{Self, UID};
     use iota::coin::{Self, TreasuryCap};
-    use iota::tx_context::{Self, TxContext};
 
     use iota::token::{Self, ActionRequest, Token};
 
@@ -30,15 +26,15 @@ module examples::loyalty {
     const GIFT_PRICE: u64 = 10;
 
     /// The OTW for the Token / Coin.
-    struct LOYALTY has drop {}
+    public struct LOYALTY has drop {}
 
     /// This is the Rule requirement for the `GiftShop`. The Rules don't need
     /// to be separate applications, some rules make sense to be part of the
     /// application itself, like this one.
-    struct GiftShop has drop {}
+    public struct GiftShop has drop {}
 
     /// The Gift object - can be purchased for 10 tokens.
-    struct Gift has key, store {
+    public  struct Gift has key, store {
         id: UID
     }
 
@@ -55,7 +51,7 @@ module examples::loyalty {
             ctx
         );
 
-        let (policy, policy_cap) = token::new_policy(&treasury_cap, ctx);
+        let (mut policy, policy_cap) = token::new_policy(&treasury_cap, ctx);
 
         // but we constrain spend by this shop:
         token::add_rule_for_action<LOYALTY, GiftShop>(
@@ -99,7 +95,7 @@ module examples::loyalty {
         assert!(token::value(&token) == GIFT_PRICE, EIncorrectAmount);
 
         let gift = Gift { id: object::new(ctx) };
-        let req = token::spend(token, ctx);
+        let mut req = token::spend(token, ctx);
 
         // only required because we've set this rule
         token::add_approval(GiftShop {}, &mut req, ctx);
@@ -107,5 +103,4 @@ module examples::loyalty {
         (gift, req)
     }
 }
-
 ```
