--- a/docs/content/developer/iota-101/iota-move-concepts/patterns/id-pointer.mdx
+++ b/docs/content/developer/iota-101/iota-move-concepts/patterns/id-pointer.mdx
@@ -14,7 +14,6 @@ The following example implements basic `Lock` and `Key` mechanics on IOTA where 
 
 ```move
 module examples::lock_and_key {
-
     /// Lock is empty, nothing to take.
     const ELockIsEmpty: u64 = 0;
 
@@ -45,9 +44,8 @@ module examples::lock_and_key {
     /// Lock some content inside a shared object. A Key is created and is
     /// sent to the transaction sender. For example, we could turn the
     /// lock into a treasure chest by locking some `Coin<IOTA>` inside.
-    ///
     /// Sender gets the `Key` to this `Lock`.
-    public fun create<T: store + key>(obj: T, ctx: &mut TxContext) {
+    public fun create<T: store + key>(obj: T, ctx: &mut TxContext): Key<T> {
         let id = object::new(ctx);
         let key_for = object::uid_to_inner(&id);
 
@@ -56,10 +54,11 @@ module examples::lock_and_key {
             locked: option::some(obj),
         });
 
-        transfer::transfer(Key<T> {
+        let key = Key<T> {
             key_for,
             id: object::new(ctx)
-        }, tx_context::sender(ctx));
+        };
+        key
     }
 
     /// Lock something inside a shared object using a Key. Aborts if
