refactor(docs): Pull validator tool into wiki as well

--- a/docs/content/operator/validator-operation/validator-tasks.mdx
+++ b/docs/content/operator/validator-operation/validator-tasks.mdx
@@ -1,4 +1,4 @@
-import ValidatorTasks from './../../../../nre/iota_for_node_operators.md';
+import ValidatorTasks from './../../../../nre/validator_tasks.md';
 import TOCInline from '@theme/TOCInline';
 
 # Validator Tasks
