--- a/docs/content/operator/validator-operation/docker/README.mdx
+++ b/docs/content/operator/validator-operation/docker/README.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_label: Docker Configuration
 ---
-import Configuration from './../../../../../nre/systemd/README.md';
+import Configuration from './../../../../../nre/docker/README.md';
 import TOCInline from '@theme/TOCInline';
 
 # System Configuration
