fix(devx): apply suggestions from code review

--- a/docs/content/about-iota/iota-architecture/consensus.mdx
+++ b/docs/content/about-iota/iota-architecture/consensus.mdx
@@ -1,3 +1,7 @@
+---
+description: Overview of the IOTA mempool and consensus engines, Narwhal and Bullshark.
+sidebar_label: Mempool and Consensus
+---
 # Consensus on IOTA
 
 ## Narwall and Bullshark
@@ -50,7 +54,7 @@ validity conditions, if validators with 2f + 1 stake receive a collection, they 
 Signatures from 2f + 1 validators by stake form a certificate of availability, which is then shared and potentially
 included in collections at round r + 1.
 
-The following figure represents five rounds of constructing such a DAG (1 to 5), with authorities A, B, C, and D
+The following figure represents five rounds of constructing such a DAG (1 to 5), with validators A, B, C, and D
 participating. For simplicity, each validator holds 1 unit of stake. The collections transitively acknowledged by A's
 latest round in A5 are represented with solid lines in the graph.
 
