fix(devx): normalize code-language TabItem spelling for Rust and TypeScript

--- a/docs/content/developer/iota-101/objects/transfers/transfer-to-object.mdx
+++ b/docs/content/developer/iota-101/objects/transfers/transfer-to-object.mdx
@@ -141,7 +141,7 @@ const result = await client.signAndExecuteTransactionBlock({
 
 </TabItem>
 
-<TabItem label="Rust" value="rust">
+<TabItem value="rust" label="Rust">
 
 ```rust
 ... // setup Rust SDK client as normal
