--- a/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
+++ b/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
@@ -38,7 +38,7 @@ The following examples demonstrate how to sign and execute transactions using Ru
 
 <Tabs groupId="code-language">
 
-<TabItem value="ts-sdk" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 There are various ways to instantiate a key pair and to derive its public key and IOTA address using the [IOTA TypeScript SDK](../../../references/ts-sdk/typescript/index.mdx#iota-typescript-sdk).
 
