--- a/docs/content/developer/standards/coin.mdx
+++ b/docs/content/developer/standards/coin.mdx
@@ -163,7 +163,7 @@ txb.moveCall({
 
 </TabItem>
 
-<TabItem label="Rust" value="rust">
+<TabItem value="rust" label="Rust">
 
 ```rust
 let mut ptb = ProgrammableTransactionBuilder::new();
