--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -12,14 +12,14 @@ A Governor address can claim the `AliasOutput` assets at any time:
 
 1. The first step is to fetch an `AliasOutput` object needed to be claimed.
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/alias-output-claim.rs#L56-L81
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 </TabItem>
 </Tabs>
@@ -29,14 +29,14 @@ A Governor address can claim the `AliasOutput` assets at any time:
 A [`Bag`](../../../references/framework/iota-framework/bag) is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are bag indexes.
 In the case of the native tokens, the keys are strings representing the [`OTW`](../../iota-101/iota-move-concepts/one-time-witness.mdx) used for the native token declaration.
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/alias-output-claim.rs#L83-L110
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 </TabItem>
 </Tabs>
@@ -45,14 +45,14 @@ In the case of the native tokens, the keys are strings representing the [`OTW`](
 An `AliasOutput` is different from an `NftOutput` or a `BasicOutput` as it contains the `Alias` object.
 In fact, the main purpose of claiming is extracting the `Alias` object from the `AliasOutput`.
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/alias-output-claim.rs#L112-L180
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 </TabItem>
 </Tabs>
@@ -66,7 +66,7 @@ In the following, an example of the process of converting a Stardust `Alias` int
 
 The following example extends the one described in the [Conversion of an Nft Output into a custom Nft](nft.mdx#conversion-of-an-nft-output-into-a-custom-nft) documentation:
 
-<Tabs>
+<Tabs groupId="code-language">
 <TabItem value="move" label="Move">
 
 The `collection.move` module extends the `custom_nft` package to make it possible to work with NFT collections:
@@ -86,14 +86,14 @@ Also, the `nft.move` module was extended with the following function:
 Once the package is prepared, we can extract and use a Stardust `Alias` in a single transaction to create a `CollectionControllerCap`.
 This capability is then used in later transactions for managing new collections.
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/alias-migration.rs#L119-L244
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 </TabItem>
 </Tabs>
