--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -4,14 +4,14 @@
 
 An address can own `BasicOutput` objects that needs to be unlocked. In this case, some off-chain queries can be used to check the unlock conditions of the `BasicOutput` and assess if it can be unlocked.    
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/check-basic-output-unlock-conditions.rs#L20-L56
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 TODO
 
@@ -23,14 +23,14 @@ Once a Basic Output can be unlocked the claim of its assets can start
 
 1. The first step is to fetch the `BasicOutput` object that needs to be claimed.
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/basic-output-claim.rs#L56-L81
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 TODO
 
@@ -40,14 +40,14 @@ TODO
 
 2. Then we check the native tokens that were possibly held by this output. A [`Bag`](../../../references/framework/iota-framework/bag) is used for holding these tokens, so in this step we are interested in obtaining the dynamic field keys that are used as bag index. In the case of the native tokens `Bag` the keys are strings representing the [`OTW`](../../iota-101/iota-move-concepts/one-time-witness.mdx) used for the native token [`Coin`](../../../references/framework/iota-framework/coin.mdx#resource-coin).
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/basic-output-claim.rs#L83-L110
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 TODO
 
@@ -56,14 +56,14 @@ TODO
 
 3. Finally, a PTB can be created using the `basic_output` as input and the `Bag` keys for iterating the native tokens extracted. 
 
-<Tabs>
-<TabItem value="rs" label="Rust">
+<Tabs groupId="code-language">
+<TabItem value="rust" label="Rust">
 
 ```rust file=<rootDir>/docs/examples/rust/stardust/basic-output-claim.rs#L113-L177
 ```
 
 </TabItem>
-<TabItem value="ts" label="TypeScript">
+<TabItem value="typescript"  label="TypeScript">
 
 TODO
 
