--- a/docs/content/about-iota/execution-architecture/iota-execution.mdx
+++ b/docs/content/about-iota/execution-architecture/iota-execution.mdx
@@ -6,6 +6,6 @@ description: This document describes the architectural approach for iota executi
 ## IOTA Execution Architecture
 
 The IOTA Execution Architecture, depicted in the included architectural diagram, outlines the technical approach for the iota execution crate to have a general view of component interaction. 
-Here we have a visual representation of the iota_execution crate with its subcrates (iota_adapter, iota_move_natives, iota_verifier).
+Here we have a visual representation of the iota_execution crate with its subcrates ([iota_adapter](adapter.mdx), [iota_move_natives](natives.mdx), iota_verifier).
 
 ![IOTA Execution Architecture](/img/concepts/execution-architecture/iota-execution.svg)
