--- a/docs/content/developer/iota-101/transactions/transactions.mdx
+++ b/docs/content/developer/iota-101/transactions/transactions.mdx
@@ -61,8 +61,8 @@ flowchart LR
 
 IOTA has some limits on transactions and the data used in them, such as a maximum size and number of objects used. You can find the these limits in the [`iota-protocol-config` crate](https://github.com/iotaledger/iota/blob/main/crates/iota-protocol-config/src/lib.rs) of the IOTA repo. The limits are defined in the `ProtocolConfig` struct and values set in the `get_for_version_impl` function.
 
-## Transactions execution flow
+## Transactions Execution Flow
 
-This diagram shows the transaction execution flow reflected by functions called inside different modules.
+The following diagram shows the transaction execution flow reflected by functions called inside different modules.
 
 ![Transactions execution flow](/img/concepts/execution-architecture/tx-exec-flow.svg)
