--- a/docs/content/about-iota/iota-architecture/iota-architecture.mdx
+++ b/docs/content/about-iota/iota-architecture/iota-architecture.mdx
@@ -28,11 +28,11 @@ The IOTA protocol, framework, and execution engine are frequently extended to in
 
 Go to [Protocol Upgrades](protocol-upgrades.mdx).
 
-## IOTA Architecture diagram
+## IOTA Architecture Diagram
 
-This diagram describes the architectural structure for IOTA solution.
+The following diagram describes the architectural structure for IOTA's solution.
 
-Core components are:
+The core components are:
 
 - [Execution Layer](../execution-architecture/execution-layer.mdx)
 - [IOTA Node](../../operator/iota-full-node.mdx)
