feat(devx): edit claiming nft outputs

--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -52,7 +52,10 @@ Coming soon
 
 ### 3. Create the PTB
 
-3. Finally, create a PTB using the `alias_output_object_ref` as input along with the native token keys. An `AliasOutput` differs from an `NftOutput` or a `BasicOutput` because it contains the `Alias` object. The main purpose of claiming is to extract the `Alias` object from the `AliasOutput`.
+Finally, create a [Programmable Transaction Block (PTB)](../../iota-101/transactions/ptb/building-ptb.mdx) 
+using the `alias_output_object_ref` as input along with the native token keys. 
+An `AliasOutput` differs from an `NftOutput` or a `BasicOutput` because it contains the `Alias` object.
+The main purpose of claiming is to extract the `Alias` object from the `AliasOutput`.
 
 <Tabs groupId="code-language">
 <TabItem value="rust" label="Rust">
