--- a/docs/content/developer/stardust/claiming/self-sponsor.mdx
+++ b/docs/content/developer/stardust/claiming/self-sponsor.mdx
@@ -2,7 +2,7 @@
 description: A guide to claiming Shimmer assets using self-sponsorship when the address lacks IOTA coins for transaction fees.
 ---
 
-# Self-Sponsoring Shimmer Assets Claiming
+# Self-Sponsoring Shimmer Assets Claims
 
 If you own Shimmer assets but don't have any IOTA coins to cover transaction fees, 
 self-sponsorship can help you claim those assets.
