fix(devx): fix build

--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -13,8 +13,8 @@ To begin, you need to determine if your `BasicOutput` can be unlocked. You can a
 <Tabs groupId="code-language">
 <TabItem value="rust" label="Rust">
 
-'''rust file=<rootDir>/docs/examples/rust/stardust/check-basic-output-unlock-conditions.rs#L20-L56
-'''
+```rust file=<rootDir>/docs/examples/rust/stardust/check-basic-output-unlock-conditions.rs#L20-L56
+```
 
 </TabItem>
 <TabItem value="typescript" label="TypeScript">
