fix(devx): replace TODO with coming soon

--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -82,7 +82,7 @@ along with the `Bag` keys to iterate over the extracted native tokens.
 </TabItem>
 <TabItem value="typescript" label="TypeScript">
 
-TODO
+Coming soon
 
 </TabItem>
 </Tabs>
