--- a/docs/content/developer/stardust/claiming/self-sponsor.mdx
+++ b/docs/content/developer/stardust/claiming/self-sponsor.mdx
@@ -66,7 +66,7 @@ For this transaction, both the sender address (the object's owner) and the spons
 </TabItem>
 <TabItem value="typescript" label="TypeScript">
 
-TODO
+Coming soon
 
 </TabItem>
 </Tabs>
