fix(devx):  titles and frontmatter

--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -1,5 +1,5 @@
 ---
-title: Claiming Alias Outputs
+description: A guide on how to claim Alias Outputs in the Move-based IOTA ledger.
 ---
 
 # Claiming Alias Outputs
