--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -2,7 +2,7 @@
 description: A guide on how to claim Basic Outputs in Move by assessing and unlocking owned objects.
 ---
 
-# Unlocking and Claiming Basic Outputs
+# Claiming Basic Outputs
 
 As a user, you may own `BasicOutput` objects that need to be unlocked before you can claim them. This guide walks you through the process of evaluating the unlock conditions for a `BasicOutput` and the steps to claim the associated assets.
 
