--- a/docs/content/developer/stardust/stardust-migration.mdx
+++ b/docs/content/developer/stardust/stardust-migration.mdx
@@ -1,6 +1,7 @@
 ---
 description: Describes the migration from IOTA Stardust to the IOTA Move-based ledger.
 ---
+# Stardust Migration
 
 The legacy IOTA and Shimmer networks run the Stardust protocol version that represents assets and tokens in a UTXO-based ledger.
 IOTA Rebased introduces the Move-based object ledger, which necessitates the migration of assets and tokens from the Stardust
